adding hearbeat to get nearby pokemons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,6 +26,8 @@
 		<div id="map"></div>
 
 		<button onclick="startBot()">Start</button>
+		<br>
+		<button onclick="getNearbyPokemons()">Get Nearby Pokemons</button>
 
 	</body>
 
