added catch support

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
 			}
 		</style>
 
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="/js/index.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcpD9RZNVJJfxf3rwqrETr4ochoHMApGc&callback=initMap"></script>
