added farming pokestops

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,14 @@
 		<button onclick="startBot()">Start</button>
 		<br>
 		<button onclick="getNearbyPokemons()">Get Nearby Pokemons</button>
+		<br>
+		<button onclick="getNearPokeStops()">Get Near PokeStops</button>
+		<br>
+		<button onclick="getNearObjects()">Get Near Objects</button>
+
+		<br><br><br>
+		<div id="log">
+		</div>
 
 	</body>
 
