added pokemon catch option to the bot

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,6 +46,9 @@
 				<button onclick="getNearPokeStops()">Get Near PokeStops</button>
 				<br>
 				<button onclick="getNearObjects()">Get Near Objects</button>
+				<br><br>
+				<input id="toggleCatchPokemonsCheckbox" name="toggleCatchPokemonsCheckbox" type="checkbox" value="catchpokemons" onchange="toggleCatchPokemons()" checked/>
+      			<label for="toggleCatchPokemonsCheckbox">Catch Pokemons?</label>
 			</div>
 
 			<div class="col s4 rightpanel">
