added login on web UI, update package.json to use my fork of pokemongo node api

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,7 +40,9 @@
 			<div class="col s8">
 				<div id="map"></div>
 
-				<button class="button" onclick="startBot()">Start</button>
+				<input id="usernameTxt" name="usernameTxt" type="text" placeholder="Username" value=""/>
+				<input id="passwordTxt" name="passwordTxt" type="password" placeholder="Password" value=""/>
+				<button class="button" onclick="login()">Log In</button>
 				<br>
 				<!-- <button onclick="getNearbyPokemons()">Get Nearby Pokemons</button> -->
 				<br>
